mobile active header

--- a/index.html
+++ b/index.html
@@ -2,20 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
-  <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Shortly URL shortening API Challenge</title>
 </head>
 <body>
-  <header></header>
+  <header class="inline-flow">
+    <img class="logo" src="./images/logo.svg" alt="logo">
+    <img class="menu-icon" src="./images/menu-icon.svg" alt="menu button">
+    <nav class="navbar">
+      <ul>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#pricing">Pricing</a></li>
+        <li><a href="#resources">Resources</a></li>
+      </ul>
+
+      <ul>
+        <li><a href="#login" class="login-link">Login</a></li>
+        <li class="signup-link"><a href="#signup" >Sign up</a></li>
+      </ul>
+
+    </nav>
+
+  </header>
+
   <main>
     <section></section>
   </main>
