navbar mobile version workin g

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <header class="inline-flow">
     <img class="logo" src="./images/logo.svg" alt="logo">
-    <img class="menu-icon" src="./images/menu-icon.svg" alt="menu button">
-    <nav class="navbar">
+    <img class="menu-icon"id='menu-icon' src="./images/menu-icon.svg" alt="menu button">
+    <nav class="navbar hidden" id="navbar">
       <ul>
         <li><a href="#features">Features</a></li>
         <li><a href="#pricing">Pricing</a></li>
@@ -33,7 +33,7 @@
     <section></section>
   </main>
   <footer></footer>
-
+  <script src="./index.js"></script>
 </body>
 </html>
 
