header for mobile and desktop done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <ul>
         <li><a href="#login" class="login-link">Login</a></li>
-        <li class="signup-link"><a href="#signup" >Sign up</a></li>
+        <li class="signup-link" id="signup-link"><a href="#signup" >Sign up</a></li>
       </ul>
 
     </nav>
