hero mobile done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
   </header>
 
   <main>
-    <section></section>
+    <section class="hero inline-flow">
+      <div class="hero-content">
+        <h1 class="section-title title">More than just shorter links</h1>
+        <p class="site-description">
+          Build your brand’s recognition and get detailed insights 
+          on how your links are performing.
+        </p>
+        <button class="primary-button get-started-button">Get Started</button>
+      </div>
+      <img src="./images/illustration-working.svg" alt="illustration working" class="hero-image">
+    </section>
+
   </main>
   <footer></footer>
   <script src="./index.js"></script>
@@ -38,16 +49,6 @@
 </html>
 
 <!-- Features
-  Pricing
-  Resources
-
-  Login
-  Sign Up
-
-  More than just shorter links
-
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
 
   Get Started
   
