css and HTML basic done

--- a/index.html
+++ b/index.html
@@ -29,72 +29,101 @@
 
   </header>
 
+  <div class="hero inline-flow">
+    <div class="hero-content">
+      <h1 class="section-title title">More than just shorter links</h1>
+      <p class="site-description">
+        Build your brand’s recognition and get detailed insights 
+        on how your links are performing.
+      </p>
+      <button class="primary-button get-started-button">Get Started</button>
+    </div>
+    <img src="./images/illustration-working.svg" alt="illustration working" class="hero-image">
+  </div>
+
   <main>
-    <section class="hero inline-flow">
-      <div class="hero-content">
-        <h1 class="section-title title">More than just shorter links</h1>
-        <p class="site-description">
-          Build your brand’s recognition and get detailed insights 
-          on how your links are performing.
-        </p>
-        <button class="primary-button get-started-button">Get Started</button>
-      </div>
-      <img src="./images/illustration-working.svg" alt="illustration working" class="hero-image">
+    <form class="short-link-form inline-flow">
+      <input class="short-link-input type="text" placeholder="Shorten a link here...">
+      <button>Shorten it!</button>
+    </form>
+
+    <section class="advance-statistics inline-flow">
+      <h3>Advance Statistics</h3>
+      <p>
+        Track how your links are performing across the web with our 
+        advanced statistics dashboard.
+      </p>
+
     </section>
 
+    <section class="advance-statistics-cards inline-flow">
+      <div class="advance-statistics-card">
+        <picture class="card-icon">
+          <img src="./images/icon-brand-recognition.svg" alt="brand recognition image">
+        </picture>
+        <h2 class="card-title">Brand Recognition</h2>
+        <p class="card-content">Boost your brand recognition with each click. Generic links don’t 
+          mean a thing. Branded links help instil confidence in your content.</p>
+      </div>
+      <div class="advance-statistics-card">
+        <picture class="card-icon">
+          <img src="./images/icon-detailed-records.svg" alt="detailed Records">
+        </picture>
+        <h2 class="card-title">Detailed Records</h2>
+        <p class="card-content">
+          Gain insights into who is clicking your links. Knowing when and where 
+          people engage with your content helps inform better decisions.
+        </p>
+      </div>
+      <div class="advance-statistics-card">
+        <picture class="card-icon">
+          <img src="./images/icon-fully-customizable.svg" alt="Fully customizable">
+        </picture>
+        <h2 class="card-title">Fully Customizable</h2>
+        <p class="card-content">
+          Improve brand awareness and content discoverability through customizable 
+          links, supercharging audience engagement.
+        </p>
+      </div>
+    </section>
+
+    <section class="get-started-section">
+      <h3>Boost your links today</h3>
+      <button class="primary-button get-started-button">Get Started</button>
+    </section>
   </main>
-  <footer></footer>
+
+  <footer>
+    <div class="container inline-flow">
+      <h2 class="footer-logo">Shortly</h2>
+      <div class="footer-info">
+        <h3>Features</h3>
+        <p>Link Shortening</p>
+        <p>Branded Links</p>
+        <p>Analytics</p>
+      </div>
+      <div class="footer-info">
+        <h3>Resources</h3>
+        <p>Blog</p>
+        <p>Developers</p>
+        <p>Support</p>
+      </div>
+      <div class="footer-info">
+        <h3>Company</h3>
+        <p>About</p>
+        <p>Our Team</p>
+        <p>Careers</p>
+        <p>Contact</p>
+      </div>
+
+      <div class="contact">
+        <img src="./images/icon-facebook.svg" alt="visit us in facebook">
+        <img src="./images/icon-twitter.svg" alt="visit us in facebook">
+        <img src="./images//icon-pinterest.svg" alt="visit us in pinterest">
+        <img src="./images/icon-instagram.svg" alt="visit us in instagram">
+      </div>
+    </div>
+  </footer>
   <script src="./index.js"></script>
 </body>
 </html>
-
-<!-- Features
-
-  Get Started
-  
-  Shorten a link here...
-
-  Shorten It!
-
-  Advanced Statistics
-
-  Track how your links are performing across the web with our 
-  advanced statistics dashboard.
-
-  Brand Recognition
-
-  Boost your brand recognition with each click. Generic links don’t 
-  mean a thing. Branded links help instil confidence in your content.
-
-  Detailed Records
-
-  Gain insights into who is clicking your links. Knowing when and where 
-  people engage with your content helps inform better decisions.
-
-  Fully Customizable
-
-  Improve brand awareness and content discoverability through customizable 
-  links, supercharging audience engagement.
-
-  Boost your links today
-
-  Get Started
-
-  Features
-
-  Link Shortening
-  Branded Links
-  Analytics
-
-  Resources
-
-  Blog
-  Developers
-  Support
-
-  Company
-
-  About
-  Our Team
-  Careers
-  Contact -->
