ready for testing

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
       <button class="primary-button" id="get-short-link-button">Shorten it!</button>
     </form>
 
+    <section class="result inline-flow" id="result">
+      
+    </section>
+
     <section class="advance-statistics inline-flow">
       <h3>Advance Statistics</h3>
       <p>
